# polyase

./: .gitignore  .pypric  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
.notebooks/: ATL_v3.hc_gene_models.repr.fasta.REMOVED.git-id  SRR14995033.bam.REMOVED.git-id  Summer_school_allele_expression.ipynb  long_readRNA_seq_counts_allele_atlantic.ipynb
.notebooks/notebooks/: long_readRNA_seq_counts_allele_atlantic.ipynb
notebooks/: long_readRNA_seq_counts_allele_atlantic.ipynb
ploidex/: __init__.py  allele_utils.py  ase_data_loader.py  filter.py  multimapping.py  plotting.py  stats.py
polyase/: Untitled-1.ipynb  __init__.py  ase_data_loader.py  filter.py  multimapping.py  plotting.py  stats.py
tests/: __init__.py  test_allele_utils.py  test_ase_data_loader.py  test_multimapping.py  test_stats.py
