[build-system]
requires = ["setuptools >= 67"]
build-backend = "setuptools.build_meta"

[project]
name = "ploidex"
version = "0.1.2"
description = "A package for analyzing allele-specific expression in polyploid plants"
authors = [
    {name = "nadjano", email = "nadja.franziska.nolte@nib.si"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
        "numpy",
        "scipy",
        "pandas",
        "anndata",
        "matplotlib",
        "seaborn",
        "isotools"
]

[project.urls]
"Homepage" = "https://github.com/nadjano/ploidex"